fixed modals on small screens

--- a/app/styles/3-layouts/_modal.scss
+++ b/app/styles/3-layouts/_modal.scss
@@ -2,6 +2,7 @@
 .modal-body img {
   display: block;
   margin: 0 auto;
+  max-width: 90%;
   padding-top: 30px;
   text-align: center;
 }
